--- a/front-app/package.json
+++ b/front-app/package.json
@@ -19,13 +19,12 @@
     "@mui/material": "^5.14.7",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.2",
+    "html2pdf.js": "^0.10.1",
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-input-mask": "^2.0.4",
-    "react-pdf": "^7.5.1",
-    "react-pdf-js": "^5.1.0",
     "react-router-dom": "^6.16.0",
     "simplebar-react": "^3.2.4",
     "yup": "^1.3.1"
